--- a/SI_Prioritize_Methane_Reductions.ipynb
+++ b/SI_Prioritize_Methane_Reductions.ipynb
@@ -10,8 +10,7 @@
     "## Prioritize rapidly scalable methane reductions in efforts to mitigate climate change\n",
     "## Dunn J.B., Salas S.D., Chen Q. and Allen D.T. Clean Technologies and Environmental Policy. 2023\n",
     "\n",
-    "## @author: Santiago D. Salas, Ph.D. - Postdoctoral Scholar at Northwestern University.\n",
-    "## - Chemical and Biological Engineering Department.\n",
+    "## @author: Santiago D. Salas, Ph.D. - Postdoctoral Scholar - Northwestern University.\n",
     "## Advisor: Prof. Jennifer B. Dunn"
    ]
   },
